[gd_scene load_steps=2 format=2]

[ext_resource path="res://Board.gd" type="Script" id=1]

[node name="Board" type="Node2D"]
script = ExtResource( 1 )

[node name="GridContainer" type="GridContainer" parent="." groups=["boards"]]
margin_left = 90.0
margin_top = -55.0
margin_right = 390.0
margin_bottom = 245.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 3
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="GridContainer"]
margin_right = 86.0
margin_bottom = 86.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand_icon = true

[node name="Button1" type="Button" parent="GridContainer"]
margin_left = 106.0
margin_right = 192.0
margin_bottom = 86.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand_icon = true

[node name="Button2" type="Button" parent="GridContainer"]
margin_left = 212.0
margin_right = 298.0
margin_bottom = 86.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand_icon = true

[node name="Button3" type="Button" parent="GridContainer"]
margin_top = 106.0
margin_right = 86.0
margin_bottom = 192.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand_icon = true

[node name="Button4" type="Button" parent="GridContainer"]
margin_left = 106.0
margin_top = 106.0
margin_right = 192.0
margin_bottom = 192.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand_icon = true

[node name="Button5" type="Button" parent="GridContainer"]
margin_left = 212.0
margin_top = 106.0
margin_right = 298.0
margin_bottom = 192.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand_icon = true

[node name="Button6" type="Button" parent="GridContainer"]
margin_top = 212.0
margin_right = 86.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand_icon = true

[node name="Button7" type="Button" parent="GridContainer"]
margin_left = 106.0
margin_top = 212.0
margin_right = 192.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand_icon = true

[node name="Button8" type="Button" parent="GridContainer"]
margin_left = 212.0
margin_top = 212.0
margin_right = 298.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand_icon = true

[connection signal="pressed" from="GridContainer/Button" to="." method="_on_Button_pressed" binds= [ 0 ]]
[connection signal="pressed" from="GridContainer/Button1" to="." method="_on_Button_pressed" binds= [ 1 ]]
[connection signal="pressed" from="GridContainer/Button2" to="." method="_on_Button_pressed" binds= [ 2 ]]
[connection signal="pressed" from="GridContainer/Button3" to="." method="_on_Button_pressed" binds= [ 3 ]]
[connection signal="pressed" from="GridContainer/Button4" to="." method="_on_Button_pressed" binds= [ 4 ]]
[connection signal="pressed" from="GridContainer/Button5" to="." method="_on_Button_pressed" binds= [ 5 ]]
[connection signal="pressed" from="GridContainer/Button6" to="." method="_on_Button_pressed" binds= [ 6 ]]
[connection signal="pressed" from="GridContainer/Button7" to="." method="_on_Button_pressed" binds= [ 7 ]]
[connection signal="pressed" from="GridContainer/Button8" to="." method="_on_Button_pressed" binds= [ 8 ]]
